--- a/css/responsive.css
+++ b/css/responsive.css
@@ -94,7 +94,7 @@
   }
   .header-top .header-container .logo img {
     width: 100%;
-    max-height: 50px;
+    max-height: 35px;
   }
   [data-dsn-grid="progress-circle"] {
     display: none;
@@ -360,6 +360,10 @@
   .next-proj .item h2 {
     font-size: 26px;
   }
+  .page-content .content-block p{
+    font-size: 15px;
+  }
+  
 }
 
 @media (max-width: 575px) {
@@ -368,6 +372,10 @@
   }
   .client-brand .brand-container .brand-item {
     width: 100%;
+  }
+  .dsn-header-hero .box-info-wrap .container iframe{
+    width: 400px;
+    height: 350px;
   }
 }
 @media all  and (max-width: 1280px){
@@ -386,30 +394,44 @@
 
 }
 @media all  and (max-width: 768px){
-  sections-wrapper .section-slider .project .project-info h1{
+  .sections-wrapper .section-slider .project .project-info h1{
     font-size: 25px;
   }
+ 
 
 }
 
 @media all  and (max-width: 648px){
-  sections-wrapper .section-slider .project .project-info h1{
+  .sections-wrapper .section-slider .project .project-info h1{
+    font-size: 20px;
+  }
+  h4.space{
     font-size: 20px;
   }
 
 }
 
 @media all  and (max-width: 480px){
-  sections-wrapper .section-slider .project .project-info h1{
+  .sections-wrapper .section-slider .project .project-info h1{
     font-size: 15px;
   }
   .client .content-client .client-curs .client-item h3{
+    font-size: 17px;
+  }
+  h4.space{
     font-size: 20px;
+  }
+  .dsn-header-hero .box-info-wrap .container iframe{
+    width: 300px;
+    height: 350px;
   }
 
     
 @media all  and (max-width: 360px){
-  sections-wrapper .section-slider .project .project-info h1{
+  .sections-wrapper .section-slider .project .project-info h1{
+    font-size: 10px;
+  }
+  .page-content .content-block p{
     font-size: 10px;
   }
 
